--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "doctrine/annotations": "^1.8",
         "sensio/framework-extra-bundle": "^5.4",
         "symfony/asset": "4.3.*",
+        "symfony/cache": "4.3.*",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/expression-language": "4.3.*",
